Add email field to all post DTOs
